--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,16 @@
 <html lang="en" ng-app="StarterApp">
 
 <head>
-    <link rel="stylesheet" href="../bower_components/angular-material/angular-material.min.css">
+    <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <!-- endbower -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
     <meta name="viewport" content="initial-scale=1" />
 </head>
 
 <body layout="row" ng-controller="AppCtrl">
     <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="isOpen">
-        <md-toolbar layout="column" layout-align="center center">
-            <div class="md-toolbar-tools">
-                <h1>Stone Age</h1>
-            </div>
-        </md-toolbar>
+        <header></header>
     </md-sidenav>
     <div layout="column" flex>
         <md-toolbar layout="column">
@@ -30,11 +28,13 @@
         </div>
     </div>
     <!-- Angular Material Dependencies -->
-    <script src="../bower_components/angular/angular.min.js"></script>
-    <script src="../bower_components/angular-route/angular-route.min.js"></script>
-    <script src="../bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="../bower_components/angular-aria/angular-aria.min.js"></script>
-    <script src="../bower_components/angular-material/angular-material.min.js"></script>
+    <!-- bower:js -->
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-aria/angular-aria.js"></script>
+    <script src="bower_components/angular-material/angular-material.js"></script>
+    <!-- endbower -->
     <script src="app.js"></script>
 </body>
 
