--- a/app/index.html
+++ b/app/index.html
@@ -1,45 +1,43 @@
 <html lang="en" ng-app="StarterApp">
 
 <head>
-  <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
-  <!-- endbower -->
-  <link rel="stylesheet" href="styles/index.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
-  <meta name="viewport" content="initial-scale=1" />
+    <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <!-- endbower -->
+    <link rel="stylesheet" href="styles/icons.css" />
+    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
+    <meta name="viewport" content="initial-scale=1" />
 </head>
 
 <body layout="column" ng-controller="AppCtrl">
-  <md-toolbar layout="row" class="md-whiteframe-z2">
-    <div class="md-toolbar-tools">
-      <div layout="row" layout-align="center center" flex="20">
-        <img src="img/logo.png" class="logo-img" />
-      </div>
-      <md-button ng-click="toggleSidenav('left')" class="md-icon-button">
-        <md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
-      </md-button>
-      <h1>Hello World</h1>
-    </div>
-  </md-toolbar>
-  <div layout="row" flex>
-    <md-sidenav layout="column" class="nav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="isOpen && $mdMedia('gt-sm')">
+    <md-toolbar layout="row" class="md-whiteframe-z2">
+        <div class="md-toolbar-tools">
+            <md-button ng-click="toggleSidenav('left')" class="md-icon-button">
+                <md-icon aria-label="Menu">menu</md-icon>
+            </md-button>
+            <h1>Hello World</h1>
+        </div>
+    </md-toolbar>
+    <div layout="row" flex>
+        <md-sidenav layout="column" class="nav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="isOpen ">
 
-    </md-sidenav>
-    <div layout="column" id="content" flex>
-      <md-content layout="row" flex class="md-padding content" style="height: 100%;">
+        </md-sidenav>
+        <div layout="column" id="content" flex>
+            <md-content layout="row" flex class="md-padding content" style="height: 100%;">
 
-      </md-content>
+            </md-content>
+        </div>
     </div>
-  </div>
-  <!-- Angular Material Dependencies -->
-  <!-- bower:js -->
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/angular-animate/angular-animate.js"></script>
-  <script src="bower_components/angular-aria/angular-aria.js"></script>
-  <script src="bower_components/angular-material/angular-material.js"></script>
-  <!-- endbower -->
-  <script src="app.js"></script>
+    <!-- Angular Material Dependencies -->
+    <!-- bower:js -->
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-aria/angular-aria.js"></script>
+    <script src="bower_components/angular-material/angular-material.js"></script>
+    <!-- endbower -->
+    <script src="app.js"></script>
 </body>
 
 </html>
