--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<html lang="en" ng-app="StarterApp">
+<html lang="en" ng-app="Template">
 
 <head>
     <!-- bower:css -->
@@ -23,10 +23,9 @@
         <md-sidenav layout="column" class="nav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="isOpen ">
 
         </md-sidenav>
-        <div layout="column" id="content" flex>
-            <md-content layout="row" flex class="md-padding content" style="height: 100%;">
-
-            </md-content>
+        <md-content layout="row" flex class="md-padding content">
+            
+        </md-content>
         </div>
     </div>
     <!-- Angular Material Dependencies -->
@@ -38,6 +37,7 @@
     <script src="bower_components/angular-material/angular-material.js"></script>
     <!-- endbower -->
     <script src="app.js"></script>
+    <script type="text/javascript" src="components/menu/menuController.js"></script>
 </body>
 
 </html>
