--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
     <!-- endbower -->
     <link rel="stylesheet" href="styles/icons.css" />
+    <link rel="stylesheet" href="styles/menu.css" />
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
     <meta name="viewport" content="initial-scale=1" />
 </head>
 
-<body layout="column" ng-controller="AppCtrl">
+<body layout="column" ng-controller="mainController">
     <md-toolbar layout="row" class="md-whiteframe-z2">
         <div class="md-toolbar-tools">
             <md-button ng-click="toggleSidenav('left')" class="md-icon-button">
@@ -21,10 +22,10 @@
     </md-toolbar>
     <div layout="row" flex>
         <md-sidenav layout="column" class="nav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="isOpen ">
-
+            <side-menu menu="menu"></menu>
         </md-sidenav>
         <md-content layout="row" flex class="md-padding content">
-            
+
         </md-content>
         </div>
     </div>
@@ -37,6 +38,8 @@
     <script src="bower_components/angular-material/angular-material.js"></script>
     <!-- endbower -->
     <script src="app.js"></script>
+    <script type="text/javascript" src="components/menu/menuFactory.js"></script>
+    <script type="text/javascript" src="components/main/mainController.js"></script>
     <script type="text/javascript" src="components/menu/menuController.js"></script>
 </body>
 
