--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,11 @@
     <script src="bower_components/angular-material/angular-material.js"></script>
     <!-- endbower -->
     <script src="app.js"></script>
+    <script src="components/menu/menuLink/menuLink.js" charset="utf-8"></script>
+    <script src="components/menu/menuToggle/menuToggle.js" charset="utf-8"></script>
     <script type="text/javascript" src="components/menu/menuFactory.js"></script>
     <script type="text/javascript" src="components/main/mainController.js"></script>
-    <script type="text/javascript" src="components/menu/menuController.js"></script>
+    <script type="text/javascript" src="components/menu/menuDirective.js"></script>
 </body>
 
 </html>
