--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
         </div>
     </md-toolbar>
     <div layout="row" flex>
-        <md-sidenav layout="column" class="nav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="isOpen ">
+        <md-sidenav layout="column" class="nav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="isOpen ">
             <side-menu menu="menu"></menu>
         </md-sidenav>
         <md-content layout="row" flex class="md-padding content">
