--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,8 @@
         <md-sidenav layout="column" class="nav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="isOpen ">
             <side-menu menu="menu"></menu>
         </md-sidenav>
-        <md-content layout="row" flex class="md-padding content">
-
+        <md-content layout="row" class="md-padding content">
+            <wizard-directive wizard="wizard"></wizard-directive>
         </md-content>
         </div>
     </div>
@@ -43,6 +43,7 @@
     <script type="text/javascript" src="components/menu/menuFactory.js"></script>
     <script type="text/javascript" src="components/main/mainController.js"></script>
     <script type="text/javascript" src="components/menu/menuDirective.js"></script>
+    <script type="text/javascript" src="components/wizard/wizardDirective.js"></script>
 </body>
 
 </html>
