wizard fixed size

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
         <md-sidenav layout="column" class="nav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="isOpen ">
             <side-menu menu="menu"></menu>
         </md-sidenav>
-        <md-content layout="row" class="md-padding content">
+        <md-content layout="row" flex class="md-padding content">
             <wizard-directive wizard="wizard"></wizard-directive>
         </md-content>
         </div>
