--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
             <md-button ng-click="toggleSidenav('left')" class="md-icon-button">
                 <md-icon aria-label="Menu">menu</md-icon>
             </md-button>
-            <h1>Hello World</h1>
+            <h1>Template</h1>
         </div>
     </md-toolbar>
     <div layout="row" flex>
@@ -25,7 +25,7 @@
             <side-menu menu="menu"></menu>
         </md-sidenav>
         <md-content layout="row" flex class="md-padding content">
-            <wizard-directive wizard="wizard"></wizard-directive>
+            <wizard-directive layout="column" flex wizard="wizard"></wizard-directive>
         </md-content>
         </div>
     </div>
