--- a/app/index.html
+++ b/app/index.html
@@ -11,19 +11,22 @@
     <meta name="viewport" content="initial-scale=1" />
 </head>
 
-<body layout="column" ng-controller="mainController">
-    <md-toolbar layout="row" class="md-whiteframe-z2">
-        <div class="md-toolbar-tools">
+<body layout="row" ng-controller="mainController">
+    <md-sidenav layout="column" class="nav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="isOpen ">
+        <header style="height: 64px;" layout layout-align="start center">
             <md-button ng-click="toggleSidenav('left')" class="md-icon-button">
                 <md-icon aria-label="Menu">menu</md-icon>
             </md-button>
-            <h1>Template</h1>
-        </div>
-    </md-toolbar>
-    <div layout="row" flex>
-        <md-sidenav layout="column" class="nav md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="isOpen ">
-            <side-menu menu="menu"></menu>
-        </md-sidenav>
+            <img src="img/logo.png" style="height: 64px;" alt="" />
+        </header>
+        <side-menu menu="menu"></menu>
+    </md-sidenav>
+    <div layout="column" flex>
+        <md-toolbar layout="row" class="md-whiteframe-z2">
+            <div class="md-toolbar-tools">
+                <h1>Template</h1>
+            </div>
+        </md-toolbar>
         <md-content layout="row" flex class="md-padding content">
             <wizard-directive layout="column" flex wizard="wizard"></wizard-directive>
         </md-content>
