--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
     <script src="bower_components/angular-messages/angular-messages.js"></script>
     <!-- endbower -->
     <script src="app.js"></script>
+    <script src="components/directives/menu/menuItem/menuItem.js" charset="utf-8"></script>
     <script src="components/directives/menu/menuLink/menuLink.js" charset="utf-8"></script>
     <script src="components/directives/menu/menuToggle/menuToggle.js" charset="utf-8"></script>
     <script type="text/javascript" src="components/directives/menu/menuFactory.js"></script>
