Adição das demos

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
             </div>
         </md-toolbar>
         <md-content layout="row" flex class="md-padding content">
-            <wizard-directive layout="column" flex wizard="wizard"></wizard-directive>
+            <ng-view flex></ng-view>
         </md-content>
     </div>
     <!-- Angular Material Dependencies -->
@@ -38,6 +38,8 @@
     <script type="text/javascript" src="components/main/mainController.js"></script>
     <script type="text/javascript" src="components/directives/menu/menuDirective.js"></script>
     <script type="text/javascript" src="components/directives/wizard/wizardDirective.js"></script>
+    <script src="components/demo/home/homeController.js" charset="utf-8"></script>
+    <script src="components/demo/wizard/wizardController.js" charset="utf-8"></script>
 </body>
 
 </html>
