Adição da demo dos forms

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
             </div>
         </md-toolbar>
         <md-content layout="row" flex class="md-padding content">
-            <ng-view flex></ng-view>
+            <ng-view layout="row" flex></ng-view>
         </md-content>
     </div>
     <!-- Angular Material Dependencies -->
@@ -40,6 +40,7 @@
     <script type="text/javascript" src="components/directives/wizard/wizardDirective.js"></script>
     <script src="components/demo/home/homeController.js" charset="utf-8"></script>
     <script src="components/demo/wizard/wizardController.js" charset="utf-8"></script>
+    <script src="components/demo/forms/general/generalFormsController.js" charset="utf-8"></script>
 </body>
 
 </html>
